--- a/Project PoC.ipynb
+++ b/Project PoC.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nroy0\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "# These are all the modules we'll be using later. Make sure you can import them\n",
     "# before proceeding further.\n",
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,18 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-0e5d861c9457>, line 59)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-0e5d861c9457>\"\u001b[0;36m, line \u001b[0;32m59\u001b[0m\n\u001b[0;31m    with tf.name_scope(name_scope)\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def conv_layer(name_scope, input_tensor, num_kernels, kernel_shape,\n",
     "               stride=1, padding=\"VALID\", relu=True, \n",
@@ -138,7 +138,76 @@
     "            \n",
     "        return layer\n",
     "\n",
-    "    \n",
+    "def conv_max_forward_reverse(name_scope, input_tensor, num_kernels, kernel_size, project,\n",
+    "                             PWM_file=None, weights_are_constant=False, stride=1,\n",
+    "                             padding='VALID', relu=True, init_according_to_given_filters=False,\n",
+    "                             init_model_ids=None):\n",
+    "    \"\"\"\n",
+    "    Returns a convolution layer\n",
+    "    \"\"\"\n",
+    "    input_shape = input_tensor.get_shape().as_list()\n",
+    "    input_channels = input_shape[-1] # number of input channels\n",
+    "    with tf.name_scope(name_scope):\n",
+    "#         if PWM_file:\n",
+    "#             PWM = read_PWM_from_file(PWM_file)\n",
+    "#             motif_length = len(PWM)\n",
+    "#             if weights_are_constant:\n",
+    "#                 # in this case - use Constant weights! not Variable, so they cannot be changed at all\n",
+    "#                 const_filter = tf.constant(PWM, tf.float32)\n",
+    "#                 weights = tf.reshape(const_filter, [BASIS_NUMBER, motif_length, 1, 1], name='weights')\n",
+    "\n",
+    "#             else:\n",
+    "#                 const_filter = tf.constant(PWM, tf.float32)\n",
+    "#                 weights = tf.Variable(tf.reshape(const_filter, [BASIS_NUMBER, motif_length, 1, 1]), name='weights')\n",
+    "#         elif init_according_to_given_filters:\n",
+    "#             all_filters_all_ks = []\n",
+    "#             num_ks = len([2, 3, 4])\n",
+    "#             num_kernels_one_k = int(project.CNN_structure.conv_num_kernels[0] / (num_ks + 1))\n",
+    "#             for k in range(num_ks+1):\n",
+    "#                 if k == num_ks:  # random initialization\n",
+    "#                     all_filters_one_k = get_random_values(1, project, num_kernels_one_k)\n",
+    "#                 else:\n",
+    "#                     model_id = init_model_ids[k]\n",
+    "#                     all_filters_one_k = read_all_filters_in_layer(1, model_id, project, num_kernels_one_k)\n",
+    "#                 all_filters_all_ks.extend(all_filters_one_k)\n",
+    "#             array_all_filters_all_ks = np.array(all_filters_all_ks)\n",
+    "#             num_filters = array_all_filters_all_ks.shape[0]  # 120\n",
+    "#             # since it is the first layer:\n",
+    "#             first_filter_dimension = kernel_size[0]\n",
+    "#             second_filter_dimension = kernel_size[1]\n",
+    "#             const_filter = tf.constant(array_all_filters_all_ks, tf.float32)\n",
+    "#             weights = tf.Variable(tf.reshape(const_filter,\n",
+    "#                                              [first_filter_dimension, second_filter_dimension, 1, num_filters]),\n",
+    "#                                   name='weights')\n",
+    "#         else:\n",
+    "        shape = kernel_size + [input_channels, num_kernels]\n",
+    "        initer = tf.truncated_normal(shape, stddev=math.sqrt(2 / float(input_channels)))\n",
+    "        weights = tf.Variable(initer, name='weights')\n",
+    "        num_kernels = weights.get_shape()[3]\n",
+    "        biases = tf.Variable(tf.zeros([num_kernels]), name='biases')\n",
+    "\n",
+    "        # If one component of shape is the special value -1, the size of that dimension is computed\n",
+    "        #  so that the total size remains constant.\n",
+    "        # In our case: -1 is inferred to be input_channels * out_channels:\n",
+    "        new_weights_shape = [-1] + kernel_size + [1]\n",
+    "        w_image = tf.reshape(weights, new_weights_shape)\n",
+    "        tf.summary.image(name_scope + \"_weights_im\", w_image, weights.get_shape()[3])\n",
+    "        forward_conv = tf.nn.conv2d(input_tensor, weights, strides=[1, stride, stride, 1], padding=padding,\n",
+    "                               name=\"forward_conv\") + biases\n",
+    "        # for reverse complement: reverse in dimension 0 and 1:\n",
+    "        rev_comp_weights = tf.reverse(weights, [0, 1], name=\"reverse_weights\")\n",
+    "        reverse_conv = tf.nn.conv2d(input_tensor, rev_comp_weights,\n",
+    "                                    strides=[1, stride, stride, 1], padding=padding,\n",
+    "                                    name=\"reverse_conv\") + biases\n",
+    "        # takes the maximum between the forward weights and the rev.-comp.-weights:\n",
+    "        max_conv = tf.maximum(forward_conv, reverse_conv, name=\"conv1\")\n",
+    "        if relu and lrelu:\n",
+    "            return tf.nn.leaky_relu(max_conv, name=\"lrelu_\"+name_suffix)\n",
+    "        elif relu:\n",
+    "            return tf.nn.relu(max_conv, name=\"relu_\"+name_suffix)\n",
+    "        else:\n",
+    "            return max_conv\n",
+    "        \n",
     "def max_pool_layer(name_scope, input_tensor, pool_size, strides = None, padding=\"SAME\"):\n",
     "    \"\"\"\n",
     "    Return a max pool layer.\n",
@@ -157,7 +226,7 @@
     "    Return a dropout layer.\n",
     "    \"\"\"\n",
     "    #TODO: is name_scope really needed?\n",
-    "    with tf.name_scope(name_scope)\n",
+    "    with tf.name_scope(name_scope):\n",
     "        return tf.nn.droupout(input_tensor, keep_prob)"
    ]
   },
@@ -298,7 +367,9 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -464,21 +535,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
