--- a/Project PoC.ipynb
+++ b/Project PoC.ipynb
@@ -32,12 +32,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Tensorboard definitions for visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def variable_summaries(var):\n",
+    "  \"\"\"Attach a lot of summaries to a Tensor (for TensorBoard visualization).\"\"\"\n",
+    "  with tf.name_scope('summaries'):\n",
+    "    mean = tf.reduce_mean(var)\n",
+    "    tf.summary.scalar('mean', mean)\n",
+    "    with tf.name_scope('stddev'):\n",
+    "      stddev = tf.sqrt(tf.reduce_mean(tf.square(var - mean)))\n",
+    "    tf.summary.scalar('stddev', stddev)\n",
+    "    tf.summary.scalar('max', tf.reduce_max(var))\n",
+    "    tf.summary.scalar('min', tf.reduce_min(var))\n",
+    "    tf.summary.histogram('histogram', var)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Loading the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +96,18 @@
     "        Tensor flow dataset containing the data matrices from data_file_names\n",
     "    \"\"\"\n",
     "    files = tf.data.Dataset.list_files(data_file_names)\n",
+    "    # The following line maps the sequence from string to one-hot-encoded. \n",
+    "    # It is commented out as it's done later, because we had problems running it here\n",
     "#     dataset = files.interleave(lambda x: tf.data.TextLineDataset(x).map(data_process_fn), cycle_length = 1)\n",
     "    dataset = files.interleave(lambda x: tf.data.TextLineDataset(x), cycle_length = 1)\n",
     "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optional: Data loading example"
    ]
   },
   {
@@ -81,40 +117,12 @@
    "outputs": [],
    "source": [
     "#Example of data loading - human positive samples\n",
-    "\n",
     "with  tf.Session() as sess:\n",
-    "    \n",
     "    input_data_example = input_fn(\"Data/Human/positive_samples\")\n",
     "    iter = input_data_example.make_one_shot_iterator()\n",
     "    val = iter.get_next()\n",
+    "    print(sess.run(val))\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Scratchpad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "kernel_shape=[4,9]\n",
-    "input_channels = 1\n",
-    "num_kernels = 20\n",
-    "\n",
-    "weights_shape = kernel_shape + [input_channels, num_kernels]\n",
-    "print(weights_shape)\n",
-    "print([1] + [2, 2] + [1])\n",
-    "print(int(500/8))\n",
-    "print(4/2)\n",
-    "\n",
-    "tf.reset_default_graph()"
    ]
   },
   {
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +161,10 @@
     "        weights_shape = kernel_shape + [input_channels, num_kernels]\n",
     "        init_vals_weights = tf.truncated_normal(weights_shape, stddev=math.sqrt(2 / float(input_channels)))\n",
     "        filter_weights = tf.Variable(init_vals_weights, name='weights'+name_suffix)\n",
-    "    \n",
+    "        variable_summaries(filter_weights)\n",
+    "        \n",
     "        biases = tf.Variable(tf.zeros([num_kernels]), name='biases'+name_suffix)\n",
+    "        variable_summaries(biases)\n",
     "        \n",
     "        #Define a convolutional layer\n",
     "        layer = tf.nn.conv2d(input_tensor, filter_weights, strides=[1, stride, stride, 1], padding=padding) + biases\n",
@@ -239,8 +249,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the classifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,8 +268,22 @@
     "    # 20 filters, each of size batch x 9x4x1\n",
     "    # TODO: make a reverse filter conv layer like in the Enhancer paper \n",
     "    l1 =  conv_layer(data, name_scope=\"layer1\", num_kernels=20, kernel_shape=[4, 9], relu=True)\n",
-    "    #TODO finish\n",
-    "\n",
+    "    #TODO finish"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the discriminator "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def discriminator(dna_sequence, label_one_hot=None, reuse=False):\n",
     "    with tf.variable_scope('discriminator') as scope:\n",
     "        if (reuse):\n",
@@ -281,8 +312,22 @@
     "        logits = tf.layers.dense(inputs=l8, units=2)\n",
     "        \n",
     "#     return tf.nn.softmax(logits, name=\"softmax_tensor\")\n",
-    "    return logits\n",
-    "    \n",
+    "    return logits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def generator(noise_vector, batch_size, label_one_hot=None, reuse=False):\n",
     "    with tf.variable_scope('generator') as scope:\n",
     "        if (reuse):\n",
@@ -308,21 +353,24 @@
     "        output1_shape = [batch_size, width/2, s8+1, g_dim*4]\n",
     "        W_conv1 = tf.get_variable('g_wconv1', [5, 5, output1_shape[-1], int(h0.get_shape()[-1])], \n",
     "                                  initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
+    "        variable_summaries(W_conv1)\n",
     "        b_conv1 = tf.get_variable('g_bconv1', [output1_shape[-1]], initializer=tf.constant_initializer(.1))\n",
+    "        variable_summaries(b_conv1)\n",
     "        H_conv1 = tf.nn.conv2d_transpose(value=h0, filter=W_conv1, output_shape=output1_shape, \n",
     "                                         strides=[1, 2, 2, 1], padding='SAME', name=\"H_conv1\") + b_conv1\n",
     "        H_conv1 = tf.contrib.layers.batch_norm(inputs = H_conv1, center=True, scale=True, is_training=True, \n",
     "                                               scope=\"g_bn1\")\n",
     "        H_conv1 = tf.nn.relu(H_conv1)\n",
     "        #Dimensions of H_conv1 = batch_size x 1 x 62 x 256\n",
-    "\n",
     "        \n",
     "        \n",
     "        #Second DeConv Layer\n",
     "        output2_shape = [batch_size, width/2, s4, g_dim*2]\n",
     "        W_conv2 = tf.get_variable('g_wconv2', [5, 5, output2_shape[-1], int(H_conv1.get_shape()[-1])], \n",
     "                                  initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
+    "        variable_summaries(W_conv2)\n",
     "        b_conv2 = tf.get_variable('g_bconv2', [output2_shape[-1]], initializer=tf.constant_initializer(.1))\n",
+    "        variable_summaries(b_conv2)\n",
     "        H_conv2 = tf.nn.conv2d_transpose(H_conv1, W_conv2, output_shape=output2_shape, \n",
     "                                         strides=[1, 1, 2, 1], padding='SAME') + b_conv2\n",
     "        H_conv2 = tf.contrib.layers.batch_norm(inputs = H_conv2, center=True, scale=True, is_training=True, \n",
@@ -335,7 +383,9 @@
     "        output3_shape = [batch_size, width, s2, g_dim*1]\n",
     "        W_conv3 = tf.get_variable('g_wconv3', [5, 5, output3_shape[-1], int(H_conv2.get_shape()[-1])], \n",
     "                                  initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
+    "        variable_summaries(W_conv3)\n",
     "        b_conv3 = tf.get_variable('g_bconv3', [output3_shape[-1]], initializer=tf.constant_initializer(.1))\n",
+    "        variable_summaries(b_conv3)\n",
     "        H_conv3 = tf.nn.conv2d_transpose(H_conv2, W_conv3, output_shape=output3_shape, \n",
     "                                         strides=[1, 2, 2, 1], padding='SAME') + b_conv3\n",
     "        H_conv3 = tf.contrib.layers.batch_norm(inputs = H_conv3, center=True, scale=True, is_training=True, \n",
@@ -348,7 +398,9 @@
     "        output4_shape = [batch_size, width, s, c_dim]\n",
     "        W_conv4 = tf.get_variable('g_wconv4', [1, 2, output4_shape[-1], int(H_conv3.get_shape()[-1])], \n",
     "                                  initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
+    "        variable_summaries(W_conv4)\n",
     "        b_conv4 = tf.get_variable('g_bconv4', [output4_shape[-1]], initializer=tf.constant_initializer(.1))\n",
+    "        variable_summaries(b_conv4)\n",
     "        H_conv4 = tf.nn.conv2d_transpose(H_conv3, W_conv4, output_shape=output4_shape, \n",
     "                                         strides=[1, 1, 2, 1], padding='VALID') + b_conv4\n",
     "        H_conv4 = tf.nn.tanh(H_conv4)\n",
@@ -438,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,15 +525,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'd_loss:0' shape=() dtype=string>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "g_loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits = Dg, labels = tf.ones_like(Dg))) # ensure forward compatibility: function needs to have logits and labels args explicitly used\n",
+    "tf.summary.scalar('g_loss', g_loss)\n",
     "\n",
     "d_loss_real = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits = Dx, labels = tf.ones_like(Dx)))\n",
+    "tf.summary.scalar('d_loss_real', d_loss_real)\n",
     "d_loss_fake = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits = Dg, labels = tf.zeros_like(Dg)))\n",
-    "d_loss = d_loss_real + d_loss_fake\n"
+    "tf.summary.scalar('d_loss_fake', d_loss_fake)\n",
+    "d_loss = d_loss_real + d_loss_fake\n",
+    "tf.summary.scalar('d_loss', d_loss)"
    ]
   },
   {
@@ -493,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -536,53 +603,140 @@
      "text": [
       "Initialized variables.\n",
       "Read data.\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n",
-      "(16, 500, 4)\n"
+      "Iteration 1/3000 done.\n",
+      "Iteration 2/3000 done.\n",
+      "Iteration 3/3000 done.\n",
+      "Iteration 4/3000 done.\n",
+      "Iteration 5/3000 done.\n",
+      "Iteration 6/3000 done.\n",
+      "Iteration 7/3000 done.\n",
+      "Iteration 8/3000 done.\n",
+      "Iteration 9/3000 done.\n",
+      "Iteration 10/3000 done.\n",
+      "Iteration 11/3000 done.\n",
+      "Iteration 12/3000 done.\n",
+      "Iteration 13/3000 done.\n",
+      "Iteration 14/3000 done.\n",
+      "Iteration 15/3000 done.\n",
+      "Iteration 16/3000 done.\n",
+      "Iteration 17/3000 done.\n",
+      "Iteration 18/3000 done.\n",
+      "Iteration 19/3000 done.\n",
+      "Iteration 20/3000 done.\n",
+      "Iteration 21/3000 done.\n",
+      "Iteration 22/3000 done.\n",
+      "Iteration 23/3000 done.\n",
+      "Iteration 24/3000 done.\n",
+      "Iteration 25/3000 done.\n",
+      "Iteration 26/3000 done.\n",
+      "Iteration 27/3000 done.\n",
+      "Iteration 28/3000 done.\n",
+      "Iteration 29/3000 done.\n",
+      "Iteration 30/3000 done.\n",
+      "Iteration 31/3000 done.\n",
+      "Iteration 32/3000 done.\n",
+      "Iteration 33/3000 done.\n",
+      "Iteration 34/3000 done.\n",
+      "Iteration 35/3000 done.\n",
+      "Iteration 36/3000 done.\n",
+      "Iteration 37/3000 done.\n",
+      "Iteration 38/3000 done.\n",
+      "Iteration 39/3000 done.\n",
+      "Iteration 40/3000 done.\n",
+      "Iteration 41/3000 done.\n",
+      "Iteration 42/3000 done.\n",
+      "Iteration 43/3000 done.\n",
+      "Iteration 44/3000 done.\n",
+      "Iteration 45/3000 done.\n",
+      "Iteration 46/3000 done.\n",
+      "Iteration 47/3000 done.\n",
+      "Iteration 48/3000 done.\n",
+      "Iteration 49/3000 done.\n",
+      "Iteration 50/3000 done.\n",
+      "Iteration 51/3000 done.\n",
+      "Iteration 52/3000 done.\n",
+      "Iteration 53/3000 done.\n",
+      "Iteration 54/3000 done.\n",
+      "Iteration 55/3000 done.\n",
+      "Iteration 56/3000 done.\n",
+      "Iteration 57/3000 done.\n",
+      "Iteration 58/3000 done.\n",
+      "Iteration 59/3000 done.\n",
+      "Iteration 60/3000 done.\n",
+      "Iteration 61/3000 done.\n",
+      "Iteration 62/3000 done.\n",
+      "Iteration 63/3000 done.\n",
+      "Iteration 64/3000 done.\n",
+      "Iteration 65/3000 done.\n",
+      "Iteration 66/3000 done.\n",
+      "Iteration 67/3000 done.\n",
+      "Iteration 68/3000 done.\n",
+      "Iteration 69/3000 done.\n",
+      "Iteration 70/3000 done.\n",
+      "Iteration 71/3000 done.\n",
+      "Iteration 72/3000 done.\n",
+      "Iteration 73/3000 done.\n"
      ]
     }
    ],
    "source": [
     "iterations = 3000\n",
     "sess = tf.Session()\n",
+    "\n",
+    "summary_op = tf.summary.merge_all()\n",
+    "logs_path=\"./logs\"\n",
+    "\n",
+    "#TODO: split into epochs and iterations?\n",
     "with sess.as_default():\n",
+    "    \n",
     "    sess.run(tf.global_variables_initializer())\n",
+    "    \n",
+    "    train_writer = tf.summary.FileWriter(logs_path, graph=tf.get_default_graph())\n",
+    "\n",
+    "    \n",
     "    print(\"Initialized variables.\")\n",
     "    data = input_fn(\"Data/Human/positive_samples\")\n",
     "    print(\"Read data.\")\n",
     "\n",
     "    batched_dataset = data.batch(batch_size)\n",
     "    batched_dataset_iterator = batched_dataset.make_one_shot_iterator()\n",
-    "    \n",
+    "    next_batch = batched_dataset_iterator.get_next()\n",
     "    \n",
     "    iterations=3000\n",
     "    for i in range(iterations):\n",
     "        z_batch = np.random.normal(-1, 1, size=[batch_size, z_dimensions])\n",
-    "        real_seq_batch = sess.run(batched_dataset_iterator.get_next())\n",
+    "        real_seq_batch = sess.run(next_batch)\n",
     "        real_seq_batch = sess.run([data_process_fn(x) for x in real_seq_batch])\n",
-    "        print(np.shape(real_seq_batch))\n",
+    "        \n",
     "        real_seq_batch = np.reshape(real_seq_batch, [batch_size, 4, 500, 1])\n",
-    "        _,dLoss = sess.run([trainerD, d_loss],feed_dict={z_placeholder:z_batch,x_placeholder:real_seq_batch}) #Update the discriminator\n",
-    "        _,gLoss = sess.run([trainerG, g_loss],feed_dict={z_placeholder:z_batch}) #Update the generator "
+    "        _, dLoss, summary1 = sess.run([trainerD, d_loss, summary_op],feed_dict={z_placeholder:z_batch,x_placeholder:real_seq_batch}) #Update the discriminator\n",
+    "        _, gLoss, summary2 = sess.run([trainerG, g_loss, summary_op],feed_dict={z_placeholder:z_batch,x_placeholder:real_seq_batch}) #Update the generator\n",
+    "        \n",
+    "        if i % 10 == 0:\n",
+    "            train_writer.add_summary(summary1, i)\n",
+    "            train_writer.add_summary(summary2, i)\n",
+    "        print(\"Iteration %d/%d done.\" %(i+1, iterations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optional: Check sample sequence again, after training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_seq = generator(z_placeholder, 1, z_dimensions, reuse=True)\n",
+    "z_batch = np.random.normal(-1, 1, size=[1, z_dimensions])\n",
+    "temp = (sess.run(sample_seq, feed_dict={z_placeholder: z_batch}))\n",
+    "my_i = temp.squeeze()\n",
+    "print(my_i)\n",
+    "plt.imshow(my_i, cmap='gray_r')"
    ]
   },
   {
