--- a/Project PoC.ipynb
+++ b/Project PoC.ipynb
@@ -261,14 +261,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def classifier(dna_sequence):\n",
-    "    \"\"\"\n",
-    "    Return the same classifier, with architecture the same as they used in Enhancer paper.\n",
-    "    \"\"\"\n",
-    "    # 20 filters, each of size batch x 9x4x1\n",
-    "    # TODO: make a reverse filter conv layer like in the Enhancer paper \n",
-    "    l1 =  conv_layer(data, name_scope=\"layer1\", num_kernels=20, kernel_shape=[4, 9], relu=True)\n",
-    "    #TODO finish"
+    "def classifier(dna_sequence, label_one_hot=None, reuse=False):\n",
+    "    with tf.variable_scope('classifier') as scope:\n",
+    "        if (reuse):\n",
+    "            tf.get_variable_scope().reuse_variables()\n",
+    "            \n",
+    "        # TODO: make a reverse filter conv layer like in the Enhancer paper \n",
+    "\n",
+    "        # convolutional + pooling #1\n",
+    "        l1 = conv_max_forward_reverse(name_scope=\"conv1\", input_tensor=dna_sequence, num_kernels=20, \n",
+    "                        kernel_shape=[4, 9], relu=True)\n",
+    "        l2 = max_pool_layer(name_scope=\"pool1\", input_tensor=l1, pool_size=[1, 3])\n",
+    "\n",
+    "        # convolutional + pooling #2\n",
+    "        l3 = conv_max_forward_reverse(name_scope=\"conv2\", input_tensor=l2, num_kernels=30, kernel_shape=[1, 5])\n",
+    "        l4 = max_pool_layer(name_scope=\"pool2\", input_tensor=l3, pool_size=[1, 4])\n",
+    "\n",
+    "        # convolutional + pooling #3\n",
+    "        l5 = conv_max_forward_reverse(name_scope=\"conv3\", input_tensor=l4, num_kernels=40, kernel_shape=[1, 3])\n",
+    "        l6 = max_pool_layer(name_scope=\"pool3\", input_tensor=l5, pool_size=[1, 4])\n",
+    "\n",
+    "        flat = flatten(l6)\n",
+    "        # fully connected layers\n",
+    "        l7 = tf.layers.dense(inputs=flat, units=90)\n",
+    "        l8 = tf.layers.dense(inputs=l7, units=45)\n",
+    "\n",
+    "        logits = tf.layers.dense(inputs=l8, units=2)\n",
+    "        \n",
+    "    return tf.argmax(logits, axis=1, name=\"softmax_tensor\")"
    ]
   },
   {
@@ -476,6 +496,42 @@
     "Gz = generator(z_placeholder, batch_size, z_dimensions) \n",
     "#Dg will hold discriminator prediction probabilities for generated images\n",
     "Dg = discriminator(Gz, reuse=True)\n",
+    "\n",
+    "print(Dx, Gz, Dg)\n",
+    "sess.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## check classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 16\n",
+    "\n",
+    "#Since we changed our batch size (from 1 to 16), we need to reset our Tensorflow graph\n",
+    "tf.reset_default_graph() \n",
+    "sess = tf.Session()\n",
+    "\n",
+    "#Placeholder for input images to the discriminator\n",
+    "x_placeholder = tf.placeholder(\"float\", shape = [None, 4, 500, 1])\n",
+    "#Placeholder for input noise vectors to the generator\n",
+    "z_placeholder = tf.placeholder(tf.float32, [None, z_dimensions]) \n",
+    "\n",
+    "\n",
+    "#Dx will hold discriminator prediction probabilities for the real enhancer sequences\n",
+    "Dx = classifier(x_placeholder) \n",
+    "#Gz holds the generated sequences\n",
+    "Gz = generator(z_placeholder, batch_size, z_dimensions) \n",
+    "#Dg will hold discriminator prediction probabilities for generated images\n",
+    "Dg = classifier(Gz, reuse=True)\n",
     "\n",
     "print(Dx, Gz, Dg)\n",
     "sess.close()"
@@ -749,21 +805,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
