--- a/Project PoC.ipynb
+++ b/Project PoC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## check classifier"
+    "### Optional: check classifier"
    ]
   },
   {
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assemble components (discriminator, generator, classifier) for triple GAN"
+    "### Assemble components (discriminator, generator) for  GAN"
    ]
   },
   {
@@ -753,7 +753,7 @@
     "    print(\"Initialized variables.\")\n",
     "    data = input_fn(\"Data/Human/positive_samples\")\n",
     "    print(\"Read data.\")\n",
-    "\n",
+    "    data = data.repeat()\n",
     "    batched_dataset = data.batch(batch_size)\n",
     "    batched_dataset_iterator = batched_dataset.make_one_shot_iterator()\n",
     "    next_batch = batched_dataset_iterator.get_next()\n",
@@ -805,21 +805,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
