casting width to ints

--- a/Project PoC.ipynb
+++ b/Project PoC.ipynb
@@ -365,12 +365,12 @@
     "        #this is a magic number which I'm not sure what means yet\n",
     "        magic_number = 5\n",
     "        \n",
-    "        h0 = tf.reshape(noise_vector, [batch_size, width/4, s16+1, magic_number])\n",
+    "        h0 = tf.reshape(noise_vector, [batch_size, int(width/4), s16+1, magic_number])\n",
     "        h0 = tf.nn.relu(h0)\n",
     "        #Dimensions of h0 = batch_size x 1 x 31 x magic_number\n",
     "\n",
     "        #First DeConv Layer\n",
-    "        output1_shape = [batch_size, width/2, s8+1, g_dim*4]\n",
+    "        output1_shape = [batch_size, int(width/2), s8+1, g_dim*4]\n",
     "        W_conv1 = tf.get_variable('g_wconv1', [5, 5, output1_shape[-1], int(h0.get_shape()[-1])], \n",
     "                                  initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
     "        variable_summaries(W_conv1)\n",
@@ -385,7 +385,7 @@
     "        \n",
     "        \n",
     "        #Second DeConv Layer\n",
-    "        output2_shape = [batch_size, width/2, s4, g_dim*2]\n",
+    "        output2_shape = [batch_size, int(width/2), s4, g_dim*2]\n",
     "        W_conv2 = tf.get_variable('g_wconv2', [5, 5, output2_shape[-1], int(H_conv1.get_shape()[-1])], \n",
     "                                  initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
     "        variable_summaries(W_conv2)\n",
@@ -400,7 +400,7 @@
     "\n",
     "        \n",
     "        #Third DeConv Layer\n",
-    "        output3_shape = [batch_size, width, s2, g_dim*1]\n",
+    "        output3_shape = [batch_size, int(width), s2, g_dim*1]\n",
     "        W_conv3 = tf.get_variable('g_wconv3', [5, 5, output3_shape[-1], int(H_conv2.get_shape()[-1])], \n",
     "                                  initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
     "        variable_summaries(W_conv3)\n",
@@ -415,7 +415,7 @@
     "\n",
     "        \n",
     "        #Fourth DeConv Layer\n",
-    "        output4_shape = [batch_size, width, s, c_dim]\n",
+    "        output4_shape = [batch_size, int(width), s, c_dim]\n",
     "        W_conv4 = tf.get_variable('g_wconv4', [1, 2, output4_shape[-1], int(H_conv3.get_shape()[-1])], \n",
     "                                  initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
     "        variable_summaries(W_conv4)\n",
