gene sequence are discretized in generator output-- some bugs fixed

--- a/Project PoC.ipynb
+++ b/Project PoC.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
     "\n",
     "        H_conv4 = tf.nn.softmax(H_conv4, axis =1, name=\"softmax_H_conv4\")\n",
     "        gene = tf.where(tf.equal(tf.reduce_max(H_conv4, axis=1, keep_dims=True), H_conv4), \n",
-    "                 tf.constant(1, shape=H_conv4.shape), tf.constant(0, shape=H_conv4.shape))\n",
+    "                 tf.divide(H_conv4, tf.reduce_max(H_conv4, axis=1, keep_dims=True)), tf.multiply(H_conv4, 0.))\n",
     "        #Dimensions of H_conv4 = batch_size x 4 x 500 x 1\n",
     "    return H_conv4,gene"
    ]
@@ -451,9 +451,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[0.]\n",
+      "   [1.]\n",
+      "   [0.]\n",
+      "   ...\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  [[0.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   ...\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [1.]]\n",
+      "\n",
+      "  [[1.]\n",
+      "   [0.]\n",
+      "   [1.]\n",
+      "   ...\n",
+      "   [0.]\n",
+      "   [1.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  [[0.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   ...\n",
+      "   [1.]\n",
+      "   [0.]\n",
+      "   [0.]]]]\n"
+     ]
+    }
+   ],
    "source": [
     "tf.reset_default_graph()\n",
     "sess = tf.Session()\n",
@@ -472,7 +510,7 @@
     "# my_seq = temp.squeeze()\n",
     "\n",
     "# print(my_seq.shape)\n",
-    "# print(temp)\n",
+    "print(temp)\n",
     "# plt.imshow(my_seq, cmap='gray_r')\n",
     "plt.show()\n",
     "sess.close()\n",
@@ -481,10 +519,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[0.]\n",
+      "   [0.]\n",
+      "   [1.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  [[1.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  [[0.]\n",
+      "   [0.]\n",
+      "   [1.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  ...\n",
+      "\n",
+      "  [[0.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [1.]]\n",
+      "\n",
+      "  [[0.]\n",
+      "   [0.]\n",
+      "   [1.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  [[0.]\n",
+      "   [1.]\n",
+      "   [0.]\n",
+      "   [0.]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(temp.T)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -599,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,9 +697,10 @@
     "#Dx will hold discriminator prediction probabilities for the real enhancer sequences\n",
     "Dx = discriminator(x_placeholder) \n",
     "#Gz holds the generated sequences\n",
-    "Gz = generator(z_placeholder, batch_size, z_dimensions) \n",
+    "Gz, gene = generator(z_placeholder, batch_size, z_dimensions) \n",
     "#Dg will hold discriminator prediction probabilities for generated images\n",
-    "Dg = discriminator(Gz, reuse=True)\n",
+    "# print(gene)\n",
+    "Dg = discriminator(gene, reuse=True)\n",
     "sess.close()\n"
    ]
   },
@@ -634,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +722,7 @@
        "<tf.Tensor 'd_loss:0' shape=() dtype=string>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,6 +740,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Mean:0\", shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(g_loss)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -669,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
